fix: poc galaxy req
Signed-off-by: Tadas Sutkaitis <tadas.sutkaitis@vexxhost.com>

--- a/molecule/aio/requirements-poc.yaml
+++ b/molecule/aio/requirements-poc.yaml
@@ -2,9 +2,9 @@
 # SPDX-License-Identifier: Apache-2.0
 
 collections:
-  - name: atmosphere.common
-    src: https://github.com/vexxhost/atmosphere.common
-    version: add-vault-operator-role
+  - name: https://github.com/vexxhost/atmosphere.common.git
+    type: git
+    version: "add-vault-operator-role"
   - name: ansible.netcommon
     version: 1.2.0
   - name: ansible.posix
