--- a/molecule/aio/requirements-poc.yaml
+++ b/molecule/aio/requirements-poc.yaml
@@ -23,6 +23,5 @@ collections:
   - name: vexxhost.ceph
     version: ">=3.1.2"
   - name: vexxhost.kubernetes
-    source: https://github.com/vexxhost/ansible-collection-kubernetes.git
+    source: https://github.com/vexxhost/ansible-collection-kubernetes.git#poc/ansible_strategy_changes
     type: git
-    version: "poc/ansible_strategy_changes"
