use custom ceph collection
Signed-off-by: Tadas Sutkaitis <tadas.sutkaitis@vexxhost.com>

--- a/molecule/aio/requirements-poc.yaml
+++ b/molecule/aio/requirements-poc.yaml
@@ -21,7 +21,8 @@ collections:
   - name: serverscom.mitogen
     version: 1.4.1
   - name: vexxhost.ceph
-    version: ">=3.1.2"
+    source: https://github.com/vexxhost/ansible-collection-ceph.git#feat/add_role_for_ceph_settings
+    type: git
   - name: vexxhost.kubernetes
     source: https://github.com/vexxhost/ansible-collection-kubernetes.git#poc/ansible_strategy_changes
     type: git
