--- a/molecule/aio/requirements-poc.yaml
+++ b/molecule/aio/requirements-poc.yaml
@@ -20,9 +20,9 @@ collections:
     version: ">=2.0.0"
   - name: serverscom.mitogen
     version: 1.4.1
-  - name: vexxhost.ceph
-    source: https://github.com/vexxhost/ansible-collection-ceph.git#feat/add_role_for_ceph_settings
+  - name: https://github.com/vexxhost/ansible-collection-ceph.git
     type: git
-  - name: vexxhost.kubernetes
-    source: https://github.com/vexxhost/ansible-collection-kubernetes.git#poc/ansible_strategy_changes
+    version: 'feat/add_role_for_ceph_settings'
+  - name: https://github.com/vexxhost/ansible-collection-kubernetes.git
     type: git
+    version: 'poc/ansible_strategy_changes'
